--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ background: #707070;
             <div class="carousel-caption">
                 <h1 ><a href=""></a>CROP DISEASE</h1>
                 
-                <a href="file:///C:/Users/Rohith/OneDrive/Desktop/final/cropdisease.html">DISEASE PREDICTION
+                <a href="final/cropdisease.html">DISEASE PREDICTION
                   BY IMAGE VISUALISING</a>.<br>
             </div>
         </div>
@@ -165,14 +165,14 @@ background: #707070;
             <img src="img/y.jpg" alt="Second Slide" width="100%" >
             <div class="carousel-caption">
               <h1 ><a href=""></a>FERTILIZER</h1>
-                <a href="file:///C:/Users/Rohith/OneDrive/Desktop/final/fertilizerrecommendation.html">FERTILIZERS</a>.<br>
+                <a href="fertilizerrecommendation.html">FERTILIZERS</a>.<br>
             </div>
         </div>
         <div class="item">
             <img src="img/zz.jpg" alt="Third Slide" width="100%">
             <div class="carousel-caption">
               <h1 ><a href=""></a>CROP RECOMMENDATION</h1>
-                <a href="file:///C:/Users/Rohith/OneDrive/Desktop/final/cropprediction.html">CROP RECOMMENDATION</a>.<br>
+                <a href="cropprediction.html">CROP RECOMMENDATION</a>.<br>
                
             </div>
         </div>
