--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ background: #707070;
             <div class="carousel-caption">
                 <h1 ><a href=""></a>CROP DISEASE</h1>
                 
-                <a href="final/cropdisease.html">DISEASE PREDICTION
+                <a href="https://rohith3579.github.io/disease/">DISEASE PREDICTION
                   BY IMAGE VISUALISING</a>.<br>
             </div>
         </div>
